action map; very simple movement

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 bevy = "0.6"
+bevy_input = { git = "https://github.com/SecretPocketCat/bevy_input", features = ["multiplayer", "serialize"] }
+bevy_extensions = { git = "https://github.com/SecretPocketCat/bevy_extensions" }
+bevy_time = { git = "https://github.com/SecretPocketCat/bevy_time" }
+serde = { version = "1.0.130", features = ["derive"] }
+bevy-inspector-egui = "0.8.2"
