--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ bevy_extensions = { git = "https://github.com/SecretPocketCat/bevy_extensions" }
 bevy_time = { git = "https://github.com/SecretPocketCat/bevy_time" }
 serde = { version = "1.0.130", features = ["derive"] }
 bevy-inspector-egui = "0.8.2"
+heron = { version = "2.0.1", features = ["2d", "debug-2d"] }
