--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ bevy_time = { git = "https://github.com/SecretPocketCat/bevy_time" }
 serde = { version = "1.0.130", features = ["derive"] }
 rand = "0.8.5"
 bevy_tweening = "0.3.2"
+bevy_ninepatch = "0.6.0"
+bevy_prototype_lyon = "0.4.0"
+# bevy_prototype_lyon = { git = "https://github.com/Nilirad/bevy_prototype_lyon", branch = "master" }
 interpolation = "0.2.0"
 bevy-inspector-egui = { version = "0.8.2" }
 heron = { version = "2.0.1", features = ["2d"] }
