--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,6 @@ bevy_prototype_lyon = "0.4.0"
 interpolation = "0.2.0"
 bevy-inspector-egui = { version = "0.8.2" }
 heron = { version = "2.0.1", features = ["2d"] }
-# heron = { version = "2.0.1", features = ["2d", "debug-2d"] }
+
+[features]
+debug = ["heron/debug-2d"]
