--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,6 +20,13 @@
       "args": ["--features", "bevy/dynamic"],
       "problemMatcher": ["$rustc"],
       "label": "bevy: run dynamic"
+    },
+    {
+      "type": "cargo",
+      "command": "run",
+      "args": ["--features", "bevy/dynamic,debug"],
+      "problemMatcher": ["$rustc"],
+      "label": "bevy: run dynamic debug"
     }
   ]
 }
