--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,10 @@ license = "MIT OR Apache-2.0"
 bevy = "0.6"
 bevy_input = { git = "https://github.com/SecretPocketCat/bevy_input", features = [
     "multiplayer",
-    "serialize",
 ] }
 bevy_extensions = { git = "https://github.com/SecretPocketCat/bevy_extensions" }
 bevy_time = { git = "https://github.com/SecretPocketCat/bevy_time" }
-serde = { version = "1.0.130", features = ["derive"] }
+# serde = { version = "1.0.130", features = ["derive"] }
 rand = "0.8.5"
 bevy_tweening = "0.3.2"
 bevy_prototype_lyon = "0.4.0"
