--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "tennis_rounds"
-version = "0.1.0"
+name = "tug_of_ball"
+version = "0.1.6"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 
