--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ bevy_input = { git = "https://github.com/SecretPocketCat/bevy_input", features =
 ] }
 bevy_extensions = { git = "https://github.com/SecretPocketCat/bevy_extensions" }
 bevy_time = { git = "https://github.com/SecretPocketCat/bevy_time" }
-# serde = { version = "1.0.130", features = ["derive"] }
+bevy-inspector-egui = { version = "0.9.0" }
 rand = "0.8.5"
 bevy_tweening = "0.3.2"
 bevy_prototype_lyon = "0.4.0"
